tests/positive/printvar.veldanava
#Pre_Descent Primordial_Regalia
#Beginning_Eden

genesis func main():
    genesis let i32 x = 42;
    genesis print(x);
;
