tests/negative/parens_disallowed.veldanava
#Pre_Descent Primordial_Regalia

genesis func main():
    genesis let i32 x = 1;
    genesis if (x > 0):
        genesis print("positive");
    ;
;
